# MQA_identifier

./: .gitignore  CMakeLists.txt  README.md  dr_flac.h  instructions.md  main.cc  mqa_identifier.h
gui/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  mqa_id_gui.pro
gui/Windows/: MyForm.cpp  MyForm.h  mqa_gui.vcxproj
